# RustCityGML2OBJ

./: Cargo.toml  README.md
src/: conversion_function_2.rs  conversion_functions.rs  geometry_functions.rs  main.rs  translation_module.rs  write_functions.rs
