[package]
name = "RustCityGML2OBJ"
version = "0.1.0"
edition = "2024"

[dependencies]
ecitygml = "0.0.1-alpha.8"
ecitygml-io = "0.0.1-alpha.8"
ecitygml-transform = "0.0.1-alpha.8"
rayon = "1.11.0"
egml = "0.0.1-alpha.8"
ecitygml-core = "0.0.1-alpha.8"
earcut = "0.4.4"
clap = { version = "4.5.48", features = ["derive"] }
nalgebra = "0.33.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }